# cartograph

./: .gitignore  CARTOGRAPH.md  CLAUDE.md  README.md  pyproject.toml
cartograph/: __init__.py  cli.py  config.py  context.py  flag.py  observations.py  reconciler.py  reporter.py  scaffold.py  state.py  track.py
cartograph/adapters/: claude.py  embeddings.py  git.py  markdown.py
cartograph/channels/: git.py  manifest.py  memory.py  track.py
docs/: demo.html
docs/foundation/: build_plan.md  concept.md  philosophy.md  scaffold.md
tests/: conftest.py  test_adapters.py  test_channel_git.py  test_channel_manifest.py  test_channel_memory.py  test_channel_track.py  test_cli.py  test_config.py  test_context.py  test_observations.py  test_reconciler.py  test_scaffold.py  test_state.py  test_track.py
