[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cartograph"
version = "0.1.0"
description = "Documentation infrastructure for AI-augmented projects. Structured capture, drift detection, no LLM."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
embeddings = ["fastembed>=0.3"]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
cartograph = "cartograph.cli:main"

[project.urls]
Homepage = "https://github.com/lihtness/cartograph"
Issues = "https://github.com/lihtness/cartograph/issues"
